# spaceBattleGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_cmake.yml
cmake/: coverage.cmake  fetch.cmake  install.cmake
data/: spaceship.mtl
documentation/: .~lock.presentation.pptx#  Command.puml  EntityComponentSystem.puml  IOC.puml  Observer.puml  Singleton.puml
documentation/common/: common.puml  ecs.puml  network.puml  visualization.puml
documentation/patterns/: command.puml  exceptionhandler.puml  ioc.puml  observer.puml  serialization.puml
libraries/BoundingVolumesHierarchy/: .clang-tidy
libraries/BoundingVolumesHierarchy/examples/: example_BVH.cpp
libraries/BoundingVolumesHierarchy/include/BoundingVolumesHierarchy/: BoundingVolumesHierarchy.hpp
libraries/BoundingVolumesHierarchy/src/: BoundingVolumesHierarchy.cpp
libraries/BoundingVolumesHierarchy/tests/: tests_BVH.cpp
libraries/Commands/: CMakePresets.json  README.md  conanfile.py
libraries/Commands/cmake/: tests.cmake
libraries/Commands/include/CommandLib/: CommandQueue.hpp  ICommand.hpp  IObject.hpp  Mocks.hpp
libraries/Commands/include/CommandLib/Commands/: BurnFuelCommand.hpp  ChangeVelocityCommand.hpp  CheckFuelCommand.hpp  LogExceptionCommand.hpp  MacroCommand.hpp  MoveCommand.hpp  MoveWithFuelCommand.hpp  RecoveryMacroCommand.hpp  RetryCommand.hpp  RotateAndChangeVelocityCommand.hpp  RotateCommand.hpp  SharedICommandSerialization.hpp
libraries/Commands/include/CommandLib/Exceptions/: CommandException.hpp  ExceptionHandler.hpp  IRecoveryHandler.hpp  LogRecoveryHandler.hpp  NotEnoughFuelException.hpp  RetryRecoveryHandler.hpp  TwoTriesThenLogHandler.hpp
libraries/Commands/src/: CommandQueue.cpp  ICommand.cpp
libraries/Commands/src/Commands/: BurnFuelCommand.cpp  ChangeVelocityCommand.cpp  CheckFuelCommand.cpp  LogExceptionCommand.cpp  MacroCommand.cpp  MoveCommand.cpp  RecoveryMacroCommand.cpp  RetryCommand.cpp  RotateCommand.cpp
libraries/Commands/src/Exceptions/: CommandException.cpp  ExceptionHandler.cpp  LogRecoveryHandler.cpp  NotEnoughFuelException.cpp  RetryRecoveryHandler.cpp  TwoTriesThenLogHandler.cpp
libraries/Commands/tests/: tests_command.cpp  tests_exceptionHandler.cpp
libraries/EntityComponentSystem/cmake/: install.cmake
libraries/EntityComponentSystem/examples/: example_ECS.cpp
libraries/EntityComponentSystem/include/ECSEngineLib/: Component.hpp  Entity.hpp  IComponentFactory.hpp  World.hpp
libraries/EntityComponentSystem/include/ECSEngineLib/Components/: FuelComponent.hpp  MissleComponent.hpp  PositionComponent.hpp  RotationComponent.hpp  VelocityComponent.hpp
libraries/EntityComponentSystem/src/: World.cpp
libraries/EntityComponentSystem/tests/: tests_ECS.cpp
libraries/EntityComponentSystem/utils/: allInOne.py
libraries/GameLogic/: .gitignore  CMakeLists.txt
libraries/GameLogic/cmake/: examples.cmake  tests.cmake
libraries/GameLogic/examples/: example_GameAuth.cpp  example_GameClient.cpp  example_GameServer.cpp
libraries/GameLogic/include/ServerLogic/: CommandExecutor.hpp  CommandService.hpp  Player.hpp  PlayerFactory.hpp  Server.h
libraries/GameLogic/include/ServerLogic/Commands/: DestroyEntityCommand.hpp  IOCMove.h  SpawnPlayerCommand.hpp
libraries/GameLogic/include/ServerLogic/Math/: Vector.h
libraries/GameLogic/include/ServerLogic/Systems/: CollisionSystem.hpp
libraries/GameLogic/src/: CommandExecutor.cpp  Player.cpp
libraries/GameLogic/src/Commands/: DestroyEntityCommand.cpp  SpawnPlayerCommand.cpp
libraries/GameLogic/src/Systems/: CollisionSystem.cpp
libraries/GameLogic/tests/: tests_GameLogic.cpp
libraries/InversionOfControl/: CMakeLists.txt
libraries/InversionOfControl/cmake/: examples.cmake  fetch.cmake
libraries/InversionOfControl/include/InversionOfControl/: InversionOfControl.h
libraries/InversionOfControl/src/: InversionOfControl.cpp
libraries/InversionOfControl/tests/: tests_IOC.cpp
libraries/Network/: CMakeLists.txt
libraries/Network/cmake/: examples.cmake  tests.cmake
libraries/Network/examples/: example_client.cpp  example_server.cpp
libraries/Network/include/crashHandler/: stacktrace.hpp
libraries/Network/include/crashHandler/implementation/: boostStackTrace.hpp
libraries/Network/include/network/: INetworkClient.hpp  INetworkServer.hpp  ISession.hpp  NetworkFactory.hpp
libraries/Network/include/network/implementations/asio/: AsioNetworkClient.hpp  AsioNetworkServer.hpp  AsioSession.hpp
libraries/Network/include/utils/: conversionUtils.hpp
libraries/Network/src/asio/: AsioNetworkClient.cpp  AsioNetworkServer.cpp  NetworkFactory.cpp
libraries/Network/src/crashHandler/: stacktrace.cpp
libraries/Network/src/crashHandler/implementation/: boostStacktrace.cpp
libraries/Network/src/utils/: conversionUtils.cpp
libraries/Network/tests/: tests_Network.cpp
libraries/Signals/: CMakeLists.txt
libraries/Signals/cmake/: coverage.cmake
libraries/Signals/include/Signals/: Signals.hpp
libraries/Signals/src/: signals.cpp
libraries/Visualization/: CMakeLists.txt  CMakeLists.txt.autosave
libraries/Visualization/cmake/: fetch.cmake
libraries/Visualization/include/Visualization/: Camera.hpp  IComponentProvider.hpp  InputHandler.hpp  Scene.hpp  Signals.hpp  Visualization.hpp  Window.hpp  WorldComponentProvider.hpp
libraries/Visualization/include/Visualization/Model/: Entity.hpp
libraries/Visualization/include/Visualization/Model/Entities/: Axes.hpp  EntityFactory.hpp  Grid.hpp  mesh.h  model.h  modelComponent.h  shaderComponent.h
libraries/Visualization/include/Visualization/Model/Shaders/: ModelShader.hpp  PBRShader.hpp  SSAO.hpp  Shader.hpp  SimpleShader.hpp
libraries/Visualization/include/Visualization/Utils/: UUID.hpp
libraries/Visualization/libs/glad/: CMakeLists.txt
libraries/Visualization/libs/glad/include/glad/: glad.h
libraries/Visualization/libs/glad/src/: glad.c
libraries/Visualization/src/: Visualisation.cpp
utils/: allInOne.py  project.txt
